--- a/common/style.css
+++ b/common/style.css
@@ -2,6 +2,7 @@
 body {
     background-color: #eeeeee;
     margin: 0;
+    font-size: large;
 }
 
 * {
@@ -64,5 +65,78 @@ nav a.fa-coffee::before {
     margin: 10% auto;
     text-align: center;
     padding: 20px;
+    display: grid;
+    grid-auto-flow: row;
+    gap: 10px;
 }
 
+@media screen and (max-width: 550px) {
+    nav a span {
+        font-size: 0;
+    }
+}
+
+#btn-generate {
+    font-size: large;
+    font-weight: bold;
+    padding: 5px 50px;
+    font-family: Rokkit;
+}
+
+
+/* The switch - the box around the slider */
+.switch {
+position: relative;
+display: inline-block;
+width: 30px;
+height: 17px;
+margin: 10px
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+opacity: 0;
+width: 0;
+height: 0;
+}
+
+/* The slider */
+.slider {
+position: absolute;
+cursor: pointer;
+top: 0;
+left: 0;
+right: 0;
+bottom: 0;
+background-color: #ccc;
+-webkit-transition: .4s;
+transition: .4s;
+border-radius: 17px;
+}
+
+.slider:before {
+position: absolute;
+content: "";
+height: 13px;
+width: 13px;
+left: 2px;
+bottom: 2px;
+background-color: white;
+-webkit-transition: .4s;
+transition: .4s;
+border-radius: 50%;
+}
+
+input:checked + .slider {
+background-color: #2196F3;
+}
+
+input:focus + .slider {
+box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+-webkit-transform: translateX(13px);
+-ms-transform: translateX(13px);
+transform: translateX(13px);
+}
